fixing spacing

--- a/assets/css/listsection.css
+++ b/assets/css/listsection.css
@@ -634,7 +634,7 @@ body:not(.small) .card-item .info-column .player-meta .medium-column:nth-child(3
 }
 
 body.medium .card-item .info-column .player-meta {
-    padding: 30px 0 0
+    padding: 15px 0 0
 }
 
 body.medium .card-item .info-column .player-meta .medium-column {
@@ -2932,6 +2932,7 @@ body.large .card-item .rank-column img,
     line-height: 1.2;
     margin-bottom: 7.5px;
     font-weight: 100;
+    padding-top: 15px; 
 }
 
 .card-item .info-column .player-description .player-subline {
